2 news apis added